--- a/BeniFit/src/main/resources/application.properties
+++ b/BeniFit/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=BeniFit
+# Configuration dyal Database URL
+spring.datasource.url=jdbc:mysql://localhost:3306/benefit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root   
+spring.datasource.password=
+
+# L-driver li ghadi yconnecta m3a MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA (Java Persistence API) configuration, update bach yakhdm l-tables direct mn entities
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true               
+
+# Dialect bach y-connecta MySQL m3a Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
