--- a/BeniFit/Dockerfile
+++ b/BeniFit/Dockerfile
@@ -1,4 +1,9 @@
-FROM ubuntu:latest
-LABEL authors="user"
+FROM openjdk:17
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+EXPOSE 9091
+ENTRYPOINT ["java","-jar","/app.jar"]
 
-ENTRYPOINT ["top", "-b"]
+
+#EXPOSE 8080
+#ENTRYPOINT ["java","-jar","/app.jar"]
