--- a/fitlifepro/angular.json
+++ b/fitlifepro/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "src/theme.less",
               "src/styles.css"
             ],
             "scripts": [],
