--- a/fitlifepro/package.json
+++ b/fitlifepro/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^18.2.2",
     "@ant-design/icons-angular": "^18.0.0",
     "express": "^4.18.2",
+    "glob": "^11.0.0",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.5.2"
   }
 }
