--- a/fitlifepro/angular.json
+++ b/fitlifepro/angular.json
@@ -27,7 +27,7 @@
               }
             ],
             "styles": [
-              "src/theme.less",
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -91,6 +91,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
