--- a/fitlifepro/package.json
+++ b/fitlifepro/package.json
@@ -26,6 +26,8 @@
     "@ant-design/icons-angular": "^18.0.0",
     "express": "^4.18.2",
     "glob": "^11.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
