--- a/fitlifepro/package.json
+++ b/fitlifepro/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
