--- a/fitlifepro/package.json
+++ b/fitlifepro/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "glob": "^11.0.0",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
