--- a/fitlifepro/package.json
+++ b/fitlifepro/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
     "@ant-design/icons-angular": "^18.0.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "glob": "^11.0.0",
